# SketchFighting

./: .gitignore  CMakeLists.txt
assets/: close.clip  instructions.clip  jumping.clip  menu.clip  selectionScreen.clip  standing.clip  theboard.clip  ui.clip  walking.clip  wins.clip
docs/: FrameRequirements.md
source/: animationsManager.cpp  assetsManager.cpp  core.cpp  inputs.cpp  main.cpp  sprite.cpp  viewsManager.cpp
source/engine/: assetsManager.cpp  assetsManager.hpp  core.cpp  core.hpp  entity.hpp  init.cpp  inputs.cpp  node.hpp  player.hpp  sprite.cpp  viewsManager.hpp
source/engine/engine/: core.hpp  entity.hpp  inputs.hpp  node.hpp
source/engine/graphics/: animation.hpp  sprite.hpp  view.hpp
source/engine/managers/: animationsManager.hpp  genericManager.hpp  nodesManager.hpp  viewsManager.hpp
source/engine/math/: coordinates.hpp
source/engine/utilities/: exceptions.hpp  generics.hpp
source/game/: fadingScene.cpp  gameSelection.cpp  instructions.cpp  intro.cpp  loader.cpp  main.cpp  mainMenu.cpp  map.cpp  player.cpp
source/game/entities/: background.hpp  globalSettings.hpp  player.hpp
source/game/maps/: beach.hpp  genericBackground.hpp  theboard.hpp
source/game/players/: doggi.hpp  miso.hpp  (+3 more)
source/graphics/: animation.hpp  core.hpp  sprite.hpp  view.hpp
source/kingsketchfight/: intro.cpp  loader.cpp  main.cpp
source/math/: coordinates.hpp
source/ui/: menu.hpp
source/utilities/: exceptions.hpp  logger.hpp  utilities.hpp
vs/KingSketchFighting/: KingSketchFighting.sln  KingSketchFighting.vcxproj  KingSketchFighting.vcxproj.filters
(+24 files in other folders)
